--- a/app/src/main/res/layout/fragment_add_todo_item.xml
+++ b/app/src/main/res/layout/fragment_add_todo_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="?back_primary"
     android:paddingHorizontal="16dp"
-    tools:context="presentation.addTodoItem.AddTodoItemFragment">
+    tools:context="presentation.addtodoitem.AddTodoItemFragment">
 
     <ImageView
         android:id="@+id/addTodoItemCloseButton"
