--- a/app/src/main/res/navigation/nav_graph_application.xml
+++ b/app/src/main/res/navigation/nav_graph_application.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/todoItemsFragment"
-        android:name="com.example.todoapp.presentation.todoItems.TodoItemsFragment"
+        android:name="com.example.todoapp.presentation.todoitems.TodoItemsFragment"
         android:label="TodoItemsFragment" >
         <action
             android:id="@+id/action_todoItemsFragment_to_addTodoItemFragment"
@@ -15,7 +15,7 @@
 
     <fragment
         android:id="@+id/addTodoItemFragment"
-        android:name="com.example.todoapp.presentation.addTodoItem.AddTodoItemFragment"
+        android:name="com.example.todoapp.presentation.addtodoitem.AddTodoItemFragment"
         android:label="AddTodoItemFragment" />
 
 </navigation>
